Rip out last use and vestiges of HttpClient library. Shortens code.